--- a/views/article.ejs
+++ b/views/article.ejs
@@ -11,7 +11,9 @@
       <div class="article">
           <h1><%= article.title %></h1>
           <p><%= article.content %></p>
-      </div>
+          
+          <a class="btn btn-home" href="/news">もどる</a>
+      </div>     
     </main>
     <%- include('footer'); %> 
 </body>
