--- a/views/create.ejs
+++ b/views/create.ejs
@@ -17,7 +17,8 @@
                 <textarea class="create-summary" type="text" name="summary"></textarea>
                 <p>本文</p>
                 <textarea class="create-content" type="text" name="content"></textarea>
-                <input type="submit" class="btn-submit" value="投稿する">
+                <a class="btn btn-home" href="/news">もどる</a>
+                <input type="submit" class="btn" value="投稿する">
             </form>
         </div>
     </main>
